--- a/projects/superdial.html
+++ b/projects/superdial.html
@@ -57,7 +57,7 @@
 	<div class="container_content_stack vertical">
         <div class="card_title">My role</div>
         <div class="container_callout content_text block">
-            I was the <strong>sole designer</strong> at this 8-person company and designed every feature in the app / page on the marketing site. I also did a good deal of <strong>front-end development</strong> - given the complexities of the back-end AI brain work, the developers and I came up with a system where I would handle a good chunk of the styling and component work which freed them up to focus on the back-end. I lightly <strong>PM-ed</strong> the portal features by developing product roadmaps, and performed the bulk of <strong>QA</strong> testing before we deployed to customers. Typical startup role!
+            I was the <strong>sole designer</strong> at this 8-person company and designed every feature in the app / page on the marketing site. I also did a good deal of <strong>full-stack development</strong>, from implementing 2-factor authentication to handling most of the front-end UI work. I lightly <strong>PM-ed</strong> the portal features by developing product roadmaps, and performed the bulk of <strong>QA</strong> testing before we deployed to customers. Typical startup role!
 
         </div>
         </br>
@@ -100,7 +100,7 @@
         </br></br>
         <div class="card_title">Marketing page</div>
         <div class="content_text">
-            I’m quite happy with our marketing page - I designed and built the whole thing in Webflow, and wanted it to look techy and trustworthy, but not too trendy. SuperBill should feel legit and professional, and not like a startup of 8 people haha. I looked at hundreds of landing pages for inspiration and decided on a style that had the color pop + animations of tech startups, but read a little more straightforward / corporate. 
+            I’m quite happy with our marketing page - I designed and built the site in Webflow, and wanted it to look techy and trustworthy (and not too "trendy"). SuperBill should feel legit and professional, and not like a startup of 8 people haha. I chose a style that had the color pop + animations of tech startups, but read a little more straightforward / corporate. 
             <br/>
             <a href="https://www.thesuperbill.com" target="_blank" class="button_secondary">Check out the website <i class="fas fa-external-link-square-alt"></i></a>
             <br/><br/>
@@ -118,10 +118,12 @@
         <br/><br/>
         <strong>Handling customer-facing interactions</strong>
         <br/>
-        OK so our product was pretty buggy at the beginning. Before I started a diligent QA process, we were building things so quickly to win deals that sometimes we’d ship something with a few bugs, or unknowingly break something in the process of building. When customers got upset (and sometimes threatened to cancel their contracts), I learned how to communicate (transparently and frequently) to keep them with us. This was pretty big for me since my prior UX roles weren’t customer-facing. 
-
+        For awhile, we were building features so quickly to win deals that sometimes we'd unknowingly break things in the process. When customers got upset (and sometimes threatened to cancel their contracts), I learned how to communicate (transparently and frequently) to keep them with us. This was pretty big for me since my prior UX roles weren’t customer-facing. 
+        <br/><br/> I also triaged customer feedback and requests. I prioritized them based on our roadmap, and oftentimes I ended up being the one implementing features since our developers were mostly focused on AI machine-learning work.
         <br/><br/>
-        I also learned how to effectively triage customer feature requests & feedback, there were a lot of them! 
+        <strong>Growing my full-stack skills</strong>
+        <br/>
+        During lighter design periods, I'd put on my dev hat to keep us moving forward! I already knew how to build components in React with front-end calls to the database, but given the complexity and higher security needs of the app, I had to learn how to properly write (python) back-end code. 
         <br/><br/>
         <strong>Developing a style</strong>
         <br/>
