adding gifs / css animations

--- a/projects/clarative.html
+++ b/projects/clarative.html
@@ -17,6 +17,102 @@
 		gtag('config', 'G-0JBLS4C2NB');
 		</script>
 </head>
+<style>
+	.ldl-bg{
+	  height: 340px;
+	  top: 0;
+	  margin:0 auto;
+	  position:relative;
+	  padding: 0;
+	  
+	}
+	
+	.waves {
+	  position:absolute;
+	  max-width: 825px;
+	  background-color: rgba(79, 76, 236, 0.6)
+	}
+	
+	.element-1, .element-2, .element-3, .element-4, .element-5, .element-6, .element-7 {
+	   animation: MoveUpDown 10s ease-in-out infinite;
+	  position: absolute;
+	  left: 0;
+	  opacity: 0;
+	  max-width: 825px;
+	}
+	
+	.element-2 {
+		animation-delay: 0.5s
+	}
+	
+	.element-4 {
+		animation-delay: 1.4s
+	}
+	
+	.element-3 {
+		animation-delay: 2.2s
+	}
+	
+	.element-7 {
+		animation-delay: 2.8s
+	}
+	
+	.element-4 {
+		animation-delay: 3.5s
+	}
+	
+	.element-6 {
+		animation-delay: 3.8s
+	}
+	
+	
+	
+	@keyframes MoveUpDown {
+	  0%, 100% {
+		top: 20px;
+		opacity: 0;
+	  }
+	  35% {
+		top: -50px;
+		opacity: 1;
+	  }
+	  60% {
+		top: -30px;
+	  }
+	  85% {
+		top: -50px;
+	  }
+	  90% {
+		top: -50px;
+		opacity: 1;
+	  }
+	}
+	
+	
+	.parallax > use {
+	  animation: move-forever 15s cubic-bezier(.55,.5,.45,.5)     infinite;
+	}
+	.parallax > use:nth-child(1) {
+	 animation-delay: 2s
+	}
+	.parallax > use:nth-child(2) {
+	  animation-delay: 4.5s
+	}
+	.parallax > use:nth-child(3) {
+	  animation-delay: .5s
+	}
+	
+	@keyframes move-forever {
+	  0% {
+	   transform: translate3d(0px,0,0);
+	  }
+	  100% { 
+		transform: translate3d(419.12px,0,0);
+	  }
+	}
+	
+	
+	</style>
 <body>
 	<div class="head" id="head">
 			<a href="../index.html" class="logo" id="logo"></a>
@@ -70,11 +166,124 @@
             <a href="https://www.clarative.ai" target="_blank" class="button_secondary">Check out the website <i class="fas fa-external-link-square-alt"></i></a>
 
             <br/><br/>
-            <img class="summary_image " src="../assets/clarative-img1.png"/>
+            <img class="summary_image " src="../assets/clarative-salepage.gif"/>
             <img class="summary_image " src="../assets/clarative-img2.png"/>
             <img class="summary_image outline" src="../assets/clarative-img3.png"/>
-            <img class="summary_image outline" src="../assets/clarative-img4.png"/>
-            <img class="summary_image " src="../assets/clarative-cards.gif"/>
+            <img class="summary_image outline" src="../assets/clarative-screenspage.gif"/>
+            <!-- <img class="summary_image " src="../assets/clarative-cards.gif"/> -->
+			<div class="ldl-bg">
+				<svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+viewBox="0 0 419.12 180.55"><defs><path id="w" d="m-419.12,120.21c71.44,0,138.12-48.46,209.56-48.46S-71.44,120.21,0,120.21s138.12-48.46,209.56-48.46,138.12,48.46,209.56,48.46v118.47H-419.12v-118.47Z" /></defs><g class="parallax"><use xlink:href="#w" x="0" y="10" fill="rgba(255,255,255,0.1)" /><use xlink:href="#w" x="0" y="-50" fill="rgba(255,255,255,0.1)" /><use xlink:href="#w" x="0" y="-10" fill="rgba(255,255,255,0.1)"/><use xlink:href="#w" x="0" y="0" fill="rgba(255,255,255,0.1)"/></g></svg><svg class="element-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.12 239.55"><defs><style>.f { stroke-linecap: round; stroke-linejoin: round; stroke: #221b4c; fill: none;}</style></defs><path class="b" d="m167.36,142.31v5c0,1.05-.77,2.16-2.26,3.02l-35.76,20.65c-2.73,1.58-6.87,1.75-9.24.38l-37.42-21.6c-1.07-.62-1.6-1.45-1.6-2.32v-5c0,.87.53,1.7,1.6,2.32l.07.04,37.35,21.56c1.1.64,2.58.94,4.12.93,1.78-.02,3.66-.47,5.12-1.31l35.76-20.65c.21-.12.4-.24.58-.38,1.11-.8,1.68-1.74,1.68-2.64Zm-43.14,29.97v-5m5.12-1.28l35.76-20.64c2.74-1.58,3.03-3.97.66-5.34l-37.42-21.6c-2.37-1.37-6.51-1.2-9.24.38l-35.76,20.64c-2.74,1.58-3.03,3.97-.66,5.34l37.42,21.6c2.37,1.37,6.51,1.2,9.24-.38Z"/>
+<polygon class="e" points="125.71 140.05 111.27 131.72 124.38 124.15 138.81 132.48 125.71 140.05"/><polygon class="d" points="143.09 150.09 128.65 141.75 141.76 134.19 156.2 142.52 143.09 150.09"/><polygon class="d" points="111.47 141.49 102.91 136.54 108.48 133.33 117.04 138.27 111.47 141.49"/><polygon class="e" points="124.28 160.94 92.46 142.57 100.12 138.15 131.94 156.52 124.28 160.94"/><polygon class="e" points="123.12 148.22 114.56 143.27 120.14 140.05 128.7 145 123.12 148.22"/><polygon class="c" points="134.73 154.92 126.17 149.97 131.74 146.75 140.3 151.7 134.73 154.92"/><path class="f" d="m149.9,142.3l-7.44,4.29-7.6-4.39,7.44-4.29m.07,3l-4.87,2.81m8.86-2.25l-6.37,3.68"/><line class="f" x1="99.84" y1="141.21" x2="126.61" y2="156.66"/><line class="f" x1="97.65" y1="142.48" x2="124.41" y2="157.93"/>
+</svg><svg class="element-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.12 239.55">
+<path class="b" d="m108.98,108.42c0,.9-.57,1.84-1.68,2.64-.18.14-.37.26-.58.38l-35.76,20.65c-1.46.84-3.34,1.29-5.12,1.31-1.54,0-3.02-.29-4.12-.93l-37.35-21.56-.07-.04c-1.07-.62-1.6-1.45-1.6-2.32,0-1.05.77-2.16,2.26-3.02l35.76-20.64c2.74-1.58,6.88-1.75,9.24-.39l37.42,21.61c1.07.62,1.6,1.44,1.6,2.31Zm-1.68,2.71c-.18.14-.37.26-.58.38l-35.76,20.65c-1.46.84-3.34,1.29-5.12,1.31-1.54,0-3.02-.29-4.12-.93l-37.35-21.56-.07-.04c-1.07-.62-1.6-1.45-1.6-2.32v5c0,.87.53,1.7,1.6,2.32l37.42,21.6c2.37,1.37,6.51,1.2,9.24-.38l35.76-20.65c1.49-.86,2.26-1.97,2.26-3.02v-5c0,.9-.57,1.84-1.68,2.64Zm-41.46,27.33v-5"/><path class="d" d="m81.91,99.28l-5.32,3.07c-5.98-3.45-15.64-3.48-21.57-.05-2.54,1.47-3.98,3.32-4.33,5.24l-7.52-.5c.53-2.87,2.7-5.65,6.49-7.84,8.88-5.12,23.32-5.09,32.26.07Z"/><path class="e" d="m82.03,117.9c-8.88,5.12-23.32,5.09-32.25-.07-5.12-2.96-7.32-6.95-6.61-10.79l7.52.5c-.49,2.57.99,5.24,4.41,7.22,5.97,3.45,15.64,3.47,21.57.04l5.36,3.1Z"/><path class="c" d="m82.03,117.9l-5.36-3.1c5.94-3.43,5.89-9-.08-12.45l5.32-3.07c8.93,5.16,8.99,13.5.12,18.62Z"/>
+</svg><svg class="element-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.12 239.55">
+<path class="b" d="m189.28,83.65v5c0,1.05-.77,2.16-2.26,3.02l-35.76,20.65c-2.73,1.58-6.87,1.75-9.24.38l-37.42-21.6c-1.07-.62-1.6-1.45-1.6-2.32v-5c0,.87.53,1.7,1.6,2.32l.07.04,37.35,21.56c1.1.64,2.58.94,4.12.93,1.78-.02,3.66-.47,5.12-1.31l35.76-20.65c.21-.12.4-.24.58-.38,1.11-.8,1.68-1.74,1.68-2.64Zm-43.14,29.97v-5m5.12-1.37l35.76-20.64c2.74-1.58,3.03-3.97.66-5.34l-37.42-21.6c-2.37-1.37-6.51-1.2-9.24.38l-35.76,20.64c-2.74,1.58-3.03,3.97-.66,5.34l37.42,21.6c2.37,1.37,6.51,1.2,9.24-.38Z"/>
+<polygon class="d" points="122.54 88.58 116.38 85.02 132.45 75.74 138.61 79.3 122.54 88.58"/><polygon class="c" points="133.25 94.76 127.09 91.21 159.23 72.65 165.39 76.21 133.25 94.76"/><polygon class="e" points="143.97 100.95 137.8 97.39 161.91 83.48 168.07 87.03 143.97 100.95"/></svg><svg class="element-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.12 239.55">
+  <defs>
+    <style>
+
+      .z {
+        opacity: .8;
+      }
+
+      .w {
+        fill: none;
+        stroke: #221b4c;
+      }
+
+      .x {
+        fill: #a974ff;
+      }
+
+      .x, .y {
+        opacity: .6;
+      }
+
+      .y {
+        fill: #4f4cec;
+      }
+
+      .z {
+        fill: #470977;
+      }
+    </style>
+  </defs>
+  <path class="b" d="m200.65,141.48l-37.42-21.6c-2.37-1.37-2.07-3.76.66-5.34l35.76-20.64c2.74-1.58,6.88-1.75,9.24-.38l37.42,21.6c2.37,1.37,2.07,3.76-.66,5.34l-35.76,20.64c-2.74,1.58-6.88,1.75-9.24.38Zm45.58-21.34c-.18.14-.37.26-.58.38l-35.76,20.65c-1.46.84-3.34,1.29-5.12,1.31-1.54,0-3.02-.29-4.12-.93l-37.35-21.56-.07-.04c-1.07-.62-1.6-1.45-1.6-2.32v5c0,.87.53,1.7,1.6,2.32l37.42,21.6c2.37,1.37,6.51,1.2,9.24-.38l35.76-20.65c1.49-.86,2.26-1.97,2.26-3.02v-5c0,.9-.57,1.84-1.68,2.64Zm-41.46,27.33v-5"/>
+  <polyline class="x" points="188.19 111.15 201.18 110.51 209.95 112.32 210.26 119.01 206.34 128.14 217.93 128.32 204.7 135.96 174.91 118.81 188.19 111.15"/>
+  <polygon class="y" points="195.37 107 209.35 106.36 203.55 116.79 221.9 112.29 216.04 122.54 212.66 131.36 204.65 135.99 174.91 118.81 195.37 107"/>
+  <polygon class="z" points="182.78 114.27 190.87 116.47 197.68 119.4 201.91 123.83 202.11 130.58 208.95 133.5 204.65 135.99 174.91 118.81 182.78 114.27"/>
+  <path class="w" d="m204.65,135.99l-29.74-17.17,32.14-18.55m5.61,31.1l3.38-8.82,5.86-10.25-18.35,4.5,5.8-10.43-13.98.64m13.59,26.5l-6.84-2.92-.2-6.75-4.23-4.43-6.81-2.94-8.1-2.2m35.15,14.05l-11.59-.18,3.92-9.13-.31-6.69-8.77-1.81-13,.64"/>
+</svg><svg class="element-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.12 239.55">
+ <defs>
+    <style>
+      .h {
+        stroke-linecap: round;
+        stroke-linejoin: round;
+      }
+
+
+
+      .v, .h {
+        stroke: #221b4c;
+      }
+
+      .v {
+        fill: #a974ff;
+      }
+
+      .g {
+        stroke: #fff;
+      }
+
+      .g, .h {
+        fill: none;
+      }
+    </style>
+  </defs><path class="b" d="m263.6,174.82l-37.42-21.6c-2.37-1.37-2.07-3.76.66-5.34l35.76-20.64c2.74-1.58,6.88-1.75,9.24-.38l37.42,21.6c2.37,1.37,2.07,3.76-.66,5.34l-35.76,20.64c-2.74,1.58-6.88,1.75-9.24.38Zm45.58-21.34c-.18.14-.37.26-.58.38l-35.76,20.65c-1.46.84-3.34,1.29-5.12,1.31-1.54,0-3.02-.29-4.12-.93l-37.35-21.56-.07-.04c-1.07-.62-1.6-1.45-1.6-2.32v5c0,.87.53,1.7,1.6,2.32l37.42,21.6c2.37,1.37,6.51,1.2,9.24-.38l35.76-20.65c1.49-.86,2.26-1.97,2.26-3.02v-5c0,.9-.57,1.84-1.68,2.64Zm-41.46,27.33v-5"/><polygon class="h" points="295.72 154.12 262.03 134.67 267.6 131.45 301.3 150.9 295.72 154.12"/><polygon class="c" points="295.72 154.12 262.03 134.67 234.86 150.36 268.55 169.81 295.72 154.12"/><line class="e" x1="261.41" y1="139.03" x2="278.81" y2="149.07"/><line class="g" x1="256.85" y1="141.66" x2="283.51" y2="157.05"/>
+  <line class="g" x1="252.3" y1="144.29" x2="274.99" y2="157.39"/><line class="g" x1="253.03" y1="149.97" x2="270.43" y2="160.02"/>
+  <line class="g" x1="243.19" y1="149.55" x2="260.59" y2="159.59"/>
+  <ellipse class="d" cx="267.89" cy="135.06" rx=".96" ry="1.66" transform="translate(131.15 402.09) rotate(-89.64)"/>
+  <ellipse class="c" cx="271.98" cy="137.42" rx=".96" ry="1.66" transform="translate(132.85 408.53) rotate(-89.64)"/>
+  <ellipse class="v" cx="276.06" cy="139.78" rx=".96" ry="1.66" transform="translate(134.55 414.96) rotate(-89.64)"/>
+</svg>
+<svg class="element-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.12 239.55">
+  <defs>
+    <style>
+      .u {
+        stroke: #221b4c;
+        fill: #fff;
+      }
+    </style>
+  </defs>
+  <path class="b" d="m288.29,122.55l-37.42-21.6c-2.37-1.37-2.07-3.76.66-5.34l35.76-20.64c2.74-1.58,6.88-1.75,9.24-.38l37.42,21.6c2.37,1.37,2.07,3.76-.66,5.34l-35.76,20.64c-2.74,1.58-6.88,1.75-9.24.38Zm45.58-21.25c-.18.14-.37.26-.58.38l-35.76,20.65c-1.46.84-3.34,1.29-5.12,1.31-1.54,0-3.02-.29-4.12-.93l-37.35-21.56-.07-.04c-1.07-.62-1.6-1.45-1.6-2.32v5c0,.87.53,1.7,1.6,2.32l37.42,21.6c2.37,1.37,6.51,1.2,9.24-.38l35.76-20.65c1.49-.86,2.26-1.97,2.26-3.02v-5c0,.9-.57,1.84-1.68,2.64Zm-41.46,27.33v-5"/>
+  <path class="u" d="m320.41,101.86l-33.7-19.45-5.58,3.22,33.7,19.45,5.58-3.22Zm5.57-3.22l-33.7-19.45-5.58,3.22,33.7,19.45,5.58-3.22Zm-11.15,6.44l-33.7-19.45-5.58,3.22,33.7,19.45,5.58-3.22Zm-5.58,3.22l-33.7-19.45-5.58,3.22,33.7,19.45,5.58-3.22Zm-5.58,3.22l-33.7-19.45-5.58,3.22,33.7,19.45,5.58-3.22Zm-5.58,3.22l-33.7-19.45-5.58,3.22,33.7,19.45,5.58-3.22Zm-5.82-35.55l-33.45,19.31m5.19,3l33.45-19.31m12.99,7.5l-33.45,19.31m41.5-14.66l-33.45,19.31"/>
+  <polygon class="c" points="320.41 101.86 286.72 82.4 292.29 79.18 325.99 98.64 320.41 101.86"/>
+</svg>
+<svg class="element-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 419.12 239.55"><defs><style>.b {fill: #e1dbf5; opacity: .8; stroke: #470977;} .b, .c, .d, .e {stroke-linecap: round; stroke-linejoin: round;}
+.c {
+        fill: #470977;
+      }
+
+      .c, .d, .e {
+        stroke: #221b4c;
+      }
+
+      .d {
+        fill: #4f4cec;
+      }
+
+      .e {
+        fill: #a974ff;
+      }
+    </style>
+  </defs>
+  <path class="b" d="m350.44,157.05l-37.42-21.6c-2.37-1.37-2.07-3.76.66-5.34l35.76-20.64c2.74-1.58,6.88-1.75,9.24-.38l37.42,21.6c2.37,1.37,2.07,3.76-.66,5.34l-35.76,20.64c-2.74,1.58-6.88,1.75-9.24.38Zm45.58-21.34c-.18.14-.37.26-.58.38l-35.76,20.65c-1.46.84-3.34,1.29-5.12,1.31-1.54,0-3.02-.29-4.12-.93l-37.35-21.56-.07-.04c-1.07-.62-1.6-1.45-1.6-2.32v5c0,.87.53,1.7,1.6,2.32l37.42,21.6c2.37,1.37,6.51,1.2,9.24-.38l35.76-20.65c1.49-.86,2.26-1.97,2.26-3.02v-5c0,.9-.57,1.84-1.68,2.64Zm-41.46,27.33v-5"/>
+  <polygon class="d" points="346.89 119.89 353.01 116.36 369.19 125.7 363.07 129.24 346.89 119.89"/>
+  <polygon class="c" points="336.25 126.03 342.37 122.5 374.74 141.19 368.62 144.72 336.25 126.03"/>
+  <polygon class="e" points="325.62 132.17 331.74 128.64 356.01 142.66 349.9 146.19 325.62 132.17"/>
+</svg>
+			</div>
 
         </div>
         <br/><br/>
