updating trip musings

--- a/projects/empirestatetrail.html
+++ b/projects/empirestatetrail.html
@@ -399,15 +399,15 @@
 
             <div class="card_title">General Trip Musings</div>
             <div class="content_text">
-                Work in progress as of Feb. 8
-                    <!-- <div class="bullet_list">
-                        <div class="bullet"><strong>A better understanding of bike maintenance.</strong> I could only fix a flat and tighten / unscrew a few things. I didn’t run into serious issues other than my hydraulic brakes breaking (and not braking!) but I would have had much more peace of mind had I better understood a few more things </div>
-                        <div class="bullet"><strong>Go on a real test ride before the trip.</strong> And/or not do 140 miles on the first day! I quickly learned that the chamois cream actually is a necessity (there was so much chafing the first few days before I finally got my hands on some), and I should definitely not be carrying all my water on my back (very quickly bought bottle cages on day 3) </div>
-                        <div class="bullet"><strong>Take it slower.</strong> 100 miles a day meant about 8 hours on the bike for me. I had to go at this pace because I wanted to finish the entire trip in the amount of time I could take off work. So, this meant I didn’t take any rest days — if there was torrential downpour (and there was!), I couldn’t take a day off and avoid the rain. </div>
-                        <div class="bullet"><strong>Document better.</strong> The bike video I made was pretty limited to whatever random footage I took. To be honest, I didn’t actually think I could make it to the end when the trip started, so I didn’t explicitly put effort into taking good videos bbecause I didn’t think there’d be a bike video afterwards. Once I hit Florida, I knew I would make it to the end and that’s when I actually started putting effort into documenting the trip. </div>
-                        <div class="bullet"><strong>Bring a Visa or MasterCard.</strong> I had my American Express credit card and many small business do not take Amex because they charges high fees.</div>
+                    <div class="bullet_list">
+                        <div class="bullet">Camping is a little tricky in the Hudson Valley portion - there aren’t many options if you are looking for sites. I’d recommend looking at Warmshowers options or paying for lodging. On the Erie Canal portion, I highly recommend staying at the lock campsites - they’re wonderfully maintained and the locals are kind.</div>
+                        <div class="bullet">Brockport is super bike-friendly and their Welcome Center offers camping, repair station, and showers! The whole town is super cute too.</div>
+                        <div class="bullet">On-road portions weave through quiet country roads - there was a brief portion on the side of a faster road somewhere near Ulster but otherwise the on-road parts are extremely chill.</div>
+                        <div class="bullet">If it rains, expect some of the Erie Canal portion to get muddy and slow! Shep’s bike had factory 700x28 tires and they performed fine.</div>
+                        <div class="bullet">The Erie Canal portion can feel monotonous - it can feel like the same view for HOURS, but I’ll take that over stressing about cars</div>
+                        <div class="bullet">There aren’t many biking amenities along the route (specifically, no water refill stations but the occasional porta-potty) but the local towns are close enough to each other that it shouldn’t be a problem. </div>
 
-                    </div> -->
+                    </div>
             </div>
         </br>
 
