--- a/misc.html
+++ b/misc.html
@@ -61,6 +61,14 @@
 								<div class="card_tag film">Film</div>
 							</div>
 					</a>
+					<a href="projects/foca17.html" class="card">
+						<img class="card_image" src="assets/lakemorey.png"/>
+						<div class="card_title">Journey Back to the Ice</div>
+						<div class="card_description">After a 5 year break from skating, I dive back into the sport with the hopes of qualifying for Adult Nationals </div>
+						<div class="card_tag_container">
+								<div class="card_tag skating">Skating</div>
+							</div>
+					</a>
 					<a href="projects/empirestatetrail.html" class="card">
 						<img class="card_image" src="assets/est-reggie-shep.jpg"/>
 						<div class="card_title">Biking the Empire State Trail</div>
@@ -68,16 +76,6 @@
 						<div class="card_tag_container">
 								<div class="card_tag biking">Biking</div>
 								<div class="card_tag film">Film</div>
-							</div>
-					</a>
-					<a href="projects/foca17.html" class="card">
-						<img class="card_image" src="assets/lakemorey.png"/>
-						<div class="card_title">Journey Back to the Ice</div>
-						<div class="card_description">I thought I hung up my skates for good in
-						2019. After watching Kaori Sakamoto and Nathan Chen at the 2022 Olympics, I
-						realized I wasn't done yet</div>
-						<div class="card_tag_container">
-								<div class="card_tag skating">Skating</div>
 							</div>
 					</a>
 					<a href="projects/southafrica.html" class="card">
