--- a/projects/empirestatetrail.html
+++ b/projects/empirestatetrail.html
@@ -423,16 +423,16 @@
 		<div class="border"></div>
         <div class="container_sideBySide"> 
             <div class="sideBySideItem width_50 fixed">
-                <a href="ecg.html" class="navigation">
+                <a href="foca17.html" class="navigation">
                     <div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
                 </a>
-                <div class="content_text_no_margin">East Coast Greenway</div>
+                <div class="content_text_no_margin">Journey Back to the Ice</div>
             </div>
             <div class="sideBySideItem_isLast width_50 align_right fixed">
-                <a href="foca17.html" class="navigation">
+                <a href="southafrica.html" class="navigation">
                     <div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
                 </a>
-                <div class="content_text_no_margin">Journey Back to the Ice</div>
+                <div class="content_text_no_margin">South Africa Climbing Trip</div>
             </div>
         </div>
     </div>
